--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,8 +9,8 @@ body {
   font-family: "Nunito", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #fff;
-  background: #333;
+  color: #000;
+  background: #fff;
 }
 
 .App {
@@ -27,9 +27,9 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #444;
+  background: #eee;
   padding: 0.5rem 1rem;
-  border-bottom: 1px solid #333333;
+  border-bottom: 1px solid #000;
 }
 
 .Card--text h1 {
@@ -59,7 +59,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-  background: #444;
+  background: #fff;
   margin-bottom: 1rem;
 }
 
